--- a/html/Login.html
+++ b/html/Login.html
@@ -26,7 +26,7 @@
                             <button type="submit" class="btn btn-primary btn-block">Login</button>
                         </form>
                         <div class="mt-3">
-                            <a href="register.html">Don't have an account? Register here.</a>
+                            <a href="./register.html">Don't have an account? Register here.</a>
                         </div>
                     </div>
                 </div>
