--- a/html/Dwight D. Eisenhower.html
+++ b/html/Dwight D. Eisenhower.html
@@ -27,9 +27,8 @@
     <ul class="nav-links">
         <li><a href="./ww2.html"> Home</a></li>
         <li><a href="#about"> War</a></li>
-        <li><a href="#"> Generals</a></li>
-        <li><a href="#"> About</a></li>
-        <li><a href="#"> Contact</a></li>
+        <li><a href="./Search.html"> search</a></li>
+        <li><a href="./warlist.html"> war list</a></li>
         <li><button class="login-button"><a href="./Register.html">Register</a> </button></li>
     </ul>
 </nav>
