--- a/html/warlist.html
+++ b/html/warlist.html
@@ -27,10 +27,9 @@
         <ul class="nav-links">
             <li><a href="./ww2.html"> Home</a></li>
             <li><a href="#about"> War</a></li>
-            <li><a href="#"> Generals</a></li>
-            <li><a href="#"> About</a></li>
+            <li><a href="./Search.html"> search</a></li>
             <li><a href="warlist.html"> War List</a></li>
-            <li><button class="login-button"><a href="./Register.html">Register</a> </button></li>
+            <li><button class="login-button"><a href="./Register.html>Register</a> </button></li>
         </ul>
     </nav>
     
