--- a/html/ww2.html
+++ b/html/ww2.html
@@ -28,7 +28,6 @@
         <ul class="nav-links">
             <li><a href="./ww2.html"> Home</a></li>
             <li><a href="#about"> War</a></li>
-            <li><a href="#"> Generals</a></li>
             <li><a href="Search.html"> Search</a></li>
             <li><a href="warlist.html"> War List</a></li>
             <li><button class="login-button"><a href="./Register.html">Register</a> </button></li>
@@ -92,7 +91,7 @@
                     was a decisive Soviet Victory but They lost 1,200,000 men to the Germans 800,000.However,The
                     Germans
                     could not replace the losses as quickly as the Soviet can and this loss destoyed any offensive
-                    cacabilities on The eastern fron to the next 6 months </p>
+                    capabilities on The eastern fron to the next 6 months </p>
                 <img id="stalingrad" src="../Image/Eastern_Front_1942-11_to_1943-03.png" alt="">
 
                 <h2>Battle of Midway</h2>
